Implementing Address new APIs
