# src/E-Commerce/docs/swagger.json
@@ -18,7 +18,7 @@
         },
         "version": "1.0"
     },
-    "host": "192.168.77.101:8080",
+    "host": "192.168.13.72:8080",
     "basePath": "/",
     "paths": {
         "/address": {
@@ -31,7 +31,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER"
+                    "User"
                 ],
                 "summary": "Get all addresses of the User.",
                 "parameters": [
@@ -88,7 +88,7 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Creates Product .",
+                "summary": "Creates Product.",
                 "parameters": [
                     {
                         "description": "All fields are required",
@@ -138,7 +138,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER_ITEM"
+                    "Wishlist"
                 ],
                 "summary": "Creates wishlist for selected product.",
                 "parameters": [
@@ -148,7 +148,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userdata.BodyWishlistInput"
+                            "$ref": "#/definitions/userdata.BodySelectedProductInput"
                         }
                     }
                 ],
@@ -180,9 +180,9 @@
                 }
             }
         },
-        "/cart_item": {
+        "/createAddress": {
             "post": {
-                "description": "To get cart list.",
+                "description": "Creates or Add Address of the User.",
                 "consumes": [
                     "application/json"
                 ],
@@ -190,9 +190,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER_ITEM"
+                    "User"
                 ],
-                "summary": "Get all cart products of the User.",
+                "summary": "Creates or Add Address of the User.",
                 "parameters": [
                     {
                         "description": "It takes UserId",
@@ -200,7 +200,59 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userdata.BodyUserIdInput"
+                            "$ref": "#/definitions/userdata.BodyAddressInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/userdata.StatusMsg"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/createCart": {
+            "post": {
+                "description": "Create or Add Cart Item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Add item into the Cart of the User.",
+                "parameters": [
+                    {
+                        "description": "It takes UserId, productId, quantity",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userdata.BodySelectedProductInput"
                         }
                     }
                 ],
@@ -245,7 +297,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER"
+                    "User"
                 ],
                 "summary": "Creates User .",
                 "parameters": [
@@ -297,7 +349,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER_ITEM"
+                    "Wishlist"
                 ],
                 "summary": "Deletes the selected wishlistId from the Wishlist Table.",
                 "parameters": [
@@ -337,6 +389,58 @@
                 }
             }
         },
+        "/deleteCart": {
+            "delete": {
+                "description": "Delete cart item from the Cart",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Delete cart item from the Cart.",
+                "parameters": [
+                    {
+                        "description": "It takes userId, productId",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userdata.BodyItemUserIdInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/userdata.StatusMsg"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ec": {
             "get": {
                 "description": "To get Home's Views Group",
@@ -344,7 +448,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "VIEW_GROUP"
+                    "ViewGroup"
                 ],
                 "summary": "Provides HomePage Views Groups",
                 "responses": {
@@ -382,7 +486,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "VIEW_GROUP"
+                    "ViewGroup"
                 ],
                 "summary": "Explore Click To Action",
                 "responses": {
@@ -423,7 +527,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER"
+                    "User"
                 ],
                 "summary": "Provides All Users.",
                 "parameters": [
@@ -468,6 +572,61 @@
                 }
             }
         },
+        "/getCart": {
+            "post": {
+                "description": "To get cart list.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Get all cart products of the User.",
+                "parameters": [
+                    {
+                        "description": "It takes UserId",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userdata.BodyUserIdInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/cart_item.CartItem"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/onboarding": {
             "get": {
                 "description": "To get response of OnBoarding Page ViewGroup",
@@ -475,7 +634,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "VIEW_GROUP"
+                    "ViewGroup"
                 ],
                 "summary": "OnBoarding Page ViewGroup",
                 "responses": {
@@ -513,7 +672,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "VIEW_GROUP"
+                    "ViewGroup"
                 ],
                 "summary": "Provides ProfilePage Views Groups",
                 "responses": {
@@ -606,7 +765,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER_ITEM"
+                    "Wishlist"
                 ],
                 "summary": "Shows the all wishlist of the User.",
                 "parameters": [
@@ -658,7 +817,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "VIEW_GROUP"
+                    "ViewGroup"
                 ],
                 "summary": "Subscription Page ViewGroup",
                 "responses": {
@@ -697,7 +856,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER_ITEM"
+                    "Subscription"
                 ],
                 "summary": "Get all subscribed products of the User.",
                 "parameters": [
@@ -752,7 +911,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "USER"
+                    "User"
                 ],
                 "summary": "Get User's information.",
                 "parameters": [
@@ -1562,6 +1721,44 @@
                 }
             }
         },
+        "userdata.BodyAddressInput": {
+            "type": "object",
+            "properties": {
+                "addressLine1": {
+                    "type": "string"
+                },
+                "addressLine2": {
+                    "type": "string"
+                },
+                "addressType": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "isPreferred": {
+                    "type": "boolean"
+                },
+                "mobile1": {
+                    "type": "string"
+                },
+                "mobile2": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                },
+                "zip": {
+                    "type": "string"
+                }
+            }
+        },
         "userdata.BodyCreateUserInput": {
             "type": "object",
             "properties": {
@@ -1585,18 +1782,22 @@
                 }
             }
         },
-        "userdata.BodyUserIdInput": {
+        "userdata.BodyItemUserIdInput": {
             "type": "object",
             "required": [
+                "productId",
                 "userId"
             ],
             "properties": {
+                "productId": {
+                    "type": "string"
+                },
                 "userId": {
                     "type": "string"
                 }
             }
         },
-        "userdata.BodyWishlistInput": {
+        "userdata.BodySelectedProductInput": {
             "type": "object",
             "required": [
                 "productId",
@@ -1610,6 +1811,17 @@
                 "quantity": {
                     "type": "integer"
                 },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "userdata.BodyUserIdInput": {
+            "type": "object",
+            "required": [
+                "userId"
+            ],
+            "properties": {
                 "userId": {
                     "type": "string"
                 }
