# src/E-Commerce/response/userdata/body_request.go
@@ -1,6 +1,6 @@
 package userdata
 
-type BodyWishlistInput struct {
+type BodySelectedProductInput struct {
 	UserId    string `json:"userId" binding:"required"`
 	ProductId string `json:"productId" binding:"required"`
 	Quantity  int    `json:"quantity" binding:"required"`
@@ -8,6 +8,11 @@ type BodyWishlistInput struct {
 
 type BodyUserIdInput struct {
 	UserId string `json:"userId" binding:"required"`
+}
+
+type BodyActionOnIdInput struct {
+	UserId     string `json:"userId" binding:"required"`
+	ActionOnId string `json:"actionOnId" binding:"required"`
 }
 
 type BodyCreateUserInput struct {
@@ -22,4 +27,18 @@ type BodyCreateUserInput struct {
 type StatusMsg struct {
 	Status bool   `json:"status"`
 	Msg    string `json:"msg"`
+}
+
+type BodyAddressInput struct {
+	UserId       string
+	AddressType  string
+	AddressLine1 string
+	AddressLine2 string
+	IsPreferred  bool
+	Zip          string
+	City         string
+	State        string
+	Country      string
+	Mobile1      string
+	Mobile2      string
 }
